kubernetes/aks/apps/finesse/internal/finesse-backend-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finesse-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: finesse-backend
  template:
    metadata:
      labels:
        app: finesse-backend
    spec:
    securityContext:
      runAsUser: 1000
      runAsGroup: 3000
      fsGroup: 2000
      containers:
        - name: finesse-backend
          image: ghcr.io/ai-cfia/finesse-backend:main
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            [
              gunicorn --bind :8080 --workers 1 --threads 8 --timeout 0 --forwarded-allow-ips "*" app:app,
            ]
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: finesse-backend-svc
spec:
  clusterIP: None
  selector:
    app: finesse-backend
  ports:
    - protocol: TCP
      port: 8080
