kubernetes/aks/apps/finesse/internal/finesse-frontend-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finesse-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: finesse-frontend
  template:
    metadata:
      labels:
        app: finesse-frontend
    spec:
    securityContext:
      runAsUser: 1000
      runAsGroup: 3000
      fsGroup: 2000
      containers:
        - name: finesse-frontend
          image: ghcr.io/ai-cfia/finesse-frontend:main
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: finesse-frontend-svc
spec:
  clusterIP: None
  selector:
    app: finesse-frontend
  ports:
    - protocol: TCP
      port: 3000
